- No whitespace between Third Container and Footer - Need to fix  the SmallLaptop - Now working on Dynamic Canvas

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -7,7 +7,6 @@
 .footer-container {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
 }
 
 section {
@@ -240,6 +239,10 @@ a:hover {
     transition: max-width 0.2s ease-out;
 }
 
+.footer-distributed:first-child{
+    margin-top: 0;
+}
+
 
 
 @media (max-width: 880px) {
@@ -262,7 +265,7 @@ a:hover {
     .footer-distributed .footer-center-right p,
     .footer-distributed .footer-links a,
     .footer-distributed .footer-company-social span,
-    .footer-distributed .footer-center-left ul li a{
+    .footer-distributed .footer-center-left ul li a {
         font-size: 12px !important;
     }
 
